# running-stats

./: README.md  pyproject.toml  setup.py
dev/: cupy_test.ipynb  test.ipynb
src/runningstats/: __init__.py  statstracker.py
