[build-system]
requires = ["setuptools>=59.2.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "runningstats"
version = "0.0.1"
authors = [
  { name="Jonathan Lindbloom", email="jonathan@lindbloom.com" },
]
description = "A simple module for computing the sample statistics of an array in a running/online fashion."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["statistics"]

[project.urls]
"Homepage" = "https://github.com/jlindbloom/running-stats"
"Bug Tracker" = "https://github.com/jlindbloom/running-stats/issues"
